Fix spacing between checkboxes

--- a/ui/src/app/home/home.page.scss
+++ b/ui/src/app/home/home.page.scss
@@ -54,7 +54,7 @@ ion-content {
       ion-label {
         font-size: 1rem;
         font-weight: normal;
-        padding-left: 10px;
+        padding-left: 8px;
       }
     }
 
